--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # 2. JAVA 17 KUR (Android Build için Zorunludur)
+      # 2. JAVA 17 KUR (Android için şart)
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
@@ -28,30 +28,38 @@ jobs:
         with:
           python-version: '3.11'
 
-      # 4. Kütüphaneleri Yükle
+      # 4. Kütüphaneleri ve EKSİK OLAN 'cookiecutter'ı Yükle
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install cookiecutter
           pip install flet
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-      # 5. Flutter Kurulumu
+      # 5. Flutter Ortamını Hazırla
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.19.0'
 
-      # 6. KRİTİK ADIM: Android Lisanslarını Kabul Et
+      # 6. Android Lisanslarını Kabul Et
       - name: Accept Android Licenses
         run: |
           yes | flutter doctor --android-licenses
 
-      # 7. APK Derleme (Hata verirse detayları görelim diye verbose ekledik)
+      # 7. Dosyaları Kontrol Et (Hata varsa loglarda görelim)
+      - name: Check Files
+        run: |
+          ls -R
+          echo "Assets klasörü var mı kontrol ediliyor..."
+          if [ -d "assets" ]; then echo "Assets klasörü bulundu."; else echo "HATA: assets klasörü bulunamadı (küçük harf olduğuna emin ol)!"; exit 1; fi
+
+      # 8. APK Derleme (Verbose moduyla detaylı)
       - name: Build APK
         run: |
           flet build apk --verbose
 
-      # 8. Sonucu Yükle
+      # 9. Sonucu Yükle
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
